--- a/app/templates/deliverymen/dashboard.html
+++ b/app/templates/deliverymen/dashboard.html
@@ -9,6 +9,9 @@
             <div class="d-flex justify-content-between align-items-center">
                 <h1><i class="bi bi-truck"></i> {{ title }}</h1>
                 <div>
+                    <a href="{{ url_for('sales.list_delivery_debts') }}" class="btn btn-warning me-2">
+                        <i class="bi bi-cash-coin"></i> Dette Livreur
+                    </a>
                     <a href="{{ url_for('deliverymen.list_deliverymen') }}" class="btn btn-secondary">
                         <i class="bi bi-list"></i> Liste des Livreurs
                     </a>
