--- a/app/templates/_form_macros.html
+++ b/app/templates/_form_macros.html
@@ -73,13 +73,13 @@
   </div>
 {% endmacro %}
 
-{% macro render_pagination(pagination, endpoint) %}
+{% macro render_pagination(pagination, endpoint, search=None) %}
   <nav aria-label="Navigation des pages">
     <ul class="pagination justify-content-center">
       {# Bouton Précédent #}
       {% if pagination.has_prev %}
         <li class="page-item">
-          <a class="page-link" href="{{ url_for(endpoint, page=pagination.prev_num) }}" aria-label="Précédent">
+          <a class="page-link" href="{{ url_for(endpoint, page=pagination.prev_num, search=search if search else '') }}" aria-label="Précédent">
             <span aria-hidden="true">&laquo;</span>
           </a>
         </li>
@@ -96,7 +96,7 @@
         {% if page_num %}
           {% if page_num != pagination.page %}
             <li class="page-item">
-              <a class="page-link" href="{{ url_for(endpoint, page=page_num) }}">{{ page_num }}</a>
+              <a class="page-link" href="{{ url_for(endpoint, page=page_num, search=search if search else '') }}">{{ page_num }}</a>
             </li>
           {% else %}
             <li class="page-item active">
@@ -113,7 +113,7 @@
       {# Bouton Suivant #}
       {% if pagination.has_next %}
         <li class="page-item">
-          <a class="page-link" href="{{ url_for(endpoint, page=pagination.next_num) }}" aria-label="Suivant">
+          <a class="page-link" href="{{ url_for(endpoint, page=pagination.next_num, search=search if search else '') }}" aria-label="Suivant">
             <span aria-hidden="true">&raquo;</span>
           </a>
         </li>
